ajout des fichiers mis à disposition